Selectin objects in 3D-view does not allways work in wireframe mode #61878

Closed
opened 2019-02-23 09:30:55 +01:00 by Seppo Tukiainen · 16 comments

System Information
Operating system: WIN10Pro{F6694022}

system-info.txt
Graphics card: NVIDIA GeForce 980

Blender Version
Broken:
2.80 (sub 45), branch: master, commit date: 2019-02-22 22:26, hash: 779860d34e, type: Release
Worked: (optional)

Short description of error
Object are not detected if try to select by mouse in wireframe mode

Exact steps for others to reproduce the error
In defaut 3D-view, live cupe in plase and create some more objext scattered along X-axis.
Chage view angle so thet object are partly covered by each other.
Switch to wireframe (transparent or not) mode, and try to select object by cliking different points on object.

**System Information** Operating system: WIN10Pro{[F6694022](https://archive.blender.org/developer/F6694022/Selection_problem.blend)} [system-info.txt](https://archive.blender.org/developer/F6694026/system-info.txt) Graphics card: NVIDIA GeForce 980 **Blender Version** Broken: 2.80 (sub 45), branch: master, commit date: 2019-02-22 22:26, hash: 779860d34e26, type: Release Worked: (optional) **Short description of error** Object are not detected if try to select by mouse in wireframe mode **Exact steps for others to reproduce the error** In defaut 3D-view, live cupe in plase and create some more objext scattered along X-axis. Chage view angle so thet object are partly covered by each other. Switch to wireframe (transparent or not) mode, and try to select object by cliking different points on object.

Added subscriber: @raportoi

Added subscriber: @raportoi

#61877 was marked as duplicate of this issue

#61877 was marked as duplicate of this issue

#61879 was marked as duplicate of this issue

#61879 was marked as duplicate of this issue
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Please upload a .blend file that we can use to reproduce the issue.

Please upload a .blend file that we can use to reproduce the issue.

Selection_problem.blend
Open .blend file, don't change view angle, and try to select cube by cliking on face of it.
Try different points.

  • cliking near edges or verticies works, but
  • cliking face of cube, avay from edges and verticies does nothing but deselect all!
    I updated display adapter driver, but no help!
    Tested also 2.80 version dated 24.2.2019, Hash: 6bab905c9d Branch: blender2.7
[Selection_problem.blend](https://archive.blender.org/developer/F6694029/Selection_problem.blend) Open .blend file, don't change view angle, and try to select cube by cliking on face of it. Try different points. - cliking near edges or verticies works, but - cliking face of cube, avay from edges and verticies does nothing but deselect all! I updated display adapter driver, but no help! Tested also 2.80 version dated 24.2.2019, Hash: 6bab905c9d40 Branch: blender2.7

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

This is, afaik, not really a bug but a design issue. In Wireframe mode, you much click on the wires to select objects, not faces.

However, this doesn't make sense when X-Ray is disabled. In that case you should be able to select objects by clicking on faces too, just like in Solid mode.

This is, afaik, not really a bug but a design issue. In Wireframe mode, you much click on the wires to select objects, not faces. However, this doesn't make sense when X-Ray is disabled. In that case you should be able to select objects by clicking on faces too, just like in Solid mode.

Added subscriber: @fclem

Added subscriber: @fclem

@fclem What do you think of this?

@fclem What do you think of this?

When the objects are not transparent selection is not working by cliking on face.
Tested olso today's release, with the same bug!

It works on version dated 18.2.2019, Hash: 7d792976e1, Branch: blender2.7
(it was only old version I had)

When the objects are not transparent selection is not working by cliking on face. Tested olso today's release, with the same bug! It works on version dated 18.2.2019, Hash: 7d792976e100, Branch: blender2.7 (it was only old version I had)

Sorry, I said wrong about the version dated 18.2.2019.

Yes, it works by mean of finding object to select, but it does it kind of wrong way:
When clik to select object that has other objects behind of it, in most cases selection is picking object that is furthermost or near the end of sight line.
That is not what the user wants to do! Normally user want to select the nearest object behind the cursor.
To select behind objects 'Alt'-key can be used!

Sorry, I said wrong about the version dated 18.2.2019. Yes, it works by mean of finding object to select, but it does it kind of wrong way: When clik to select object that has other objects behind of it, in most cases selection is picking object that is furthermost or near the end of sight line. That is not what the user wants to do! Normally user want to select the nearest object behind the cursor. To select behind objects 'Alt'-key can be used!

Blender 2.7x did not have the exact same equivalent of wireframe mode with X-Ray off, so it's not really correct to sat that this used to work in 2.7x. However, yes, selecting objects should work like Solid mode when X-Ray is off.

Blender 2.7x did not have the exact same equivalent of wireframe mode with X-Ray off, so it's not really correct to sat that this used to work in 2.7x. However, yes, selecting objects should work like Solid mode when X-Ray is off.

It works on version dated 18.2.2019, Hash: 7d792976e1, Branch: blender2.7

That version is 2.80 beta!
Text is copied from upper-right corner of the splash-screen.splash-screen.png

> It works on version dated 18.2.2019, Hash: 7d792976e100, Branch: blender2.7 That version is 2.80 beta! Text is copied from upper-right corner of the splash-screen.![splash-screen.png](https://archive.blender.org/developer/F6717296/splash-screen.png)

This issue was referenced by 4b916612e1

This issue was referenced by 4b916612e194a7c12b9c0b2e1ec61058381a2a8f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61878
No description provided.