Fix T61878: Selection does not allways work in wireframe mode

This draw surfaces if the xray option is disabled even in wireframe mode.